<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@color/main_turquoise">

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_margin="15dp">

			<TextView
				android:id="@+id/prepare_1_welcome_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/prepare_1_welcome_text"
				android:gravity="fill_horizontal"
				android:layout_marginTop="10dp"
				android:layout_marginBottom="10dp"
				android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
				android:background="@drawable/card_background"
				android:padding="10dp"/>


			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="0dip"
				android:orientation="horizontal"
				android:layout_weight="3"
				android:padding="15dp"
				android:background="@drawable/card_background">



				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="center"
					android:layout_weight="1"
					android:layout_margin="2dp">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_map_flat" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/prepare_1_map"/>

				</LinearLayout>





				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="center"
					android:layout_weight="1"
					android:layout_margin="2dp">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_poi_flat" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/prepare_1_poi"/>

				</LinearLayout>



				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:gravity="center"
					android:layout_weight="1"
					android:layout_margin="2dp">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:src="@drawable/ic_info_flat" />

					<TextView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/prepare_1_info"/>

				</LinearLayout>

			</LinearLayout>

			<!--<TextView
				android:id="@+id/prepare_1_network"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/prepare_1_network"
				android:gravity="center_horizontal"
				android:layout_marginTop="15dp"
				android:textColor="@color/white"/>-->

		</LinearLayout>

	</ScrollView>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:weightSum="4"
		android:padding="10dp">

		<Button
			android:id="@+id/prepare_1_reject"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prepare_button_reject"
			android:layout_weight="1"
			android:layout_marginRight="10dp"/>

		<Button
			android:id="@+id/prepare_1_next"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/prepare_button_next"
			android:layout_weight="3"/>


	</LinearLayout>


</RelativeLayout>
