<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:fillViewport="true">

	<LinearLayout 
	    android:id="@+id/container"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:padding="10dp" >	

	    <EditText
	        android:id="@+id/travellog_edit_text"
	        android:layout_width="match_parent"
	        android:layout_height="0dp"
	        android:layout_weight="1"
	        android:hint="@string/travellog_edit_title_text"
	        android:inputType="textMultiLine|textCapSentences"
	        android:gravity="top|left" />
	    
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="10dp"
	        android:text="@string/travellog_checkin" />
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:gravity="center"
	        android:layout_margin="15dp">
	        	    
		    <ImageButton
		        android:id="@+id/travellog_detect_location_btn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:contentDescription="@string/travellog_detect_location"
		        android:src="@drawable/ic_action_map_nearby" />
		
		    <TextView 
		        android:paddingLeft="10dp"
		        android:id="@+id/travellog_detect_location_txt"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/travellog_detect_location"/>
		    
		</LinearLayout>    

	    
	    <!-- <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/travellog_share_options" />
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:layout_margin="15dp"
	        android:gravity="center">
	        
		    <Switch
		        android:id="@+id/travellog_switch_share_vk"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textOff="@string/vk"
		        android:textOn="@string/vk"
		        android:thumb="@drawable/switch_inner_holo_light"
		        android:track="@drawable/switch_track_holo_light" />
	        
		    <Switch
		        android:id="@+id/travellog_switch_share_fb"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textOn="@string/fb"
		        android:textOff="@string/fb"
		        android:thumb="@drawable/switch_inner_holo_light"
		        android:track="@drawable/switch_track_holo_light" />
	        
		    <Switch
		        android:id="@+id/travellog_switch_share_4sq"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/sq" />	    
	    </LinearLayout>
	    
	    <TextView
	        android:id="@+id/socical_networks_warn"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/travellog_info"/> -->
		    
	</LinearLayout>

</ScrollView>
